--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="title-bar">
       <div class="title">{{incident.incidentName}} <span *ngIf="incident.fireOfNoteInd" #el class="fire-icon-container"><img class="icon" height="24" width="24" src="/assets/images/local_fire_department.png" alt="local_fire_department"></span> <span #el class="no-print" style="cursor: pointer;" (click)="onWatchlist() ? removeFromWatchlist() : addToWatchlist()"><mat-icon style="color:#1A5A96">{{onWatchlist() ? 'bookmark' : 'bookmark_border'}}</mat-icon></span></div>
-      <div class="subtitle"><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres" rel="noopener" target="_blank">{{convertToFireCentreDescription(incident.fireCentreCode)}}</a></div>
+      <div class="subtitle"><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres" rel="noopener" target="_blank">{{convertToFireCentreDescription(this.incident.fireCentreName || incident.fireCentre || incident.fireCentreCode)}}</a></div>
     </div>
     <div class="info-panel">
       <div><span class="label">Fire Number: </span><span>{{convertFireNumber(incident)}}</span></div>
