--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -73,3 +73,13 @@
   margin: auto;
   background-color: white;
 }
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 1.3rem;
+  }
+
+  h4 {
+    font-size: 1.3rem;
+  }
+}
