--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -37,7 +37,7 @@
         <!-- Image/video section: fetch from aws cache -->
         <div style="text-align: center;" *ngIf="primaryMedia !== null">
           <div *ngIf="showWarning" class="preview-warning">Warning: Primary Video/Image selection cannot be previewd</div>
-          <img id="primary-image-container" *ngIf="primaryMedia.type === 'image'" style="max-width: 100%; height: auto; border-radius: 16px;" [alt]="primaryMedia.title" [src]="primaryMedia.thumbnail" width="1000" height="400" (error)="handleImageFallback(primaryMedia.href)" />
+          <img id="primary-image-container" *ngIf="primaryMedia.type === 'image'" style="max-width: 100%; height: auto; max-height: 500px; border-radius: 16px;" [alt]="primaryMedia.title" [src]="primaryMedia.thumbnail" width="500" height="500" (error)="handleImageFallback(primaryMedia.href)" />
           <youtube-player class="no-print" *ngIf="primaryMedia.type === 'video'"
             videoId={{convertToYoutubeId(primaryMedia.href)}}
             suggestedQuality="highres"
@@ -118,10 +118,11 @@
     <div *ngIf="(incident.wildfireCrewResourcesInd || incident.wildfireAviationResourceInd || incident.incidentMgmtCrewRsrcInd || incident.heavyEquipmentResourcesInd || incident.structureProtectionRsrcInd); else defaultResourcesContent">
       <!-- Wildfire Resources -->
       <div *ngIf="incident.wildfireCrewResourcesInd && incident.wildfireCrewResourcesDetail" class="resource-panel">
-        <div class="resource-panel-icon">
+        <div *ngIf="!isMobileView()" class="resource-panel-icon">
           <img class="image-size" src="../../../assets/images/svg-icons/wildfire-crews.svg" alt="Wildfire Crews" />
         </div>
         <div class="resource-panel-content">
+          <img *ngIf="isMobileView()" class="image-size" src="../../../assets/images/svg-icons/wildfire-crews.svg" alt="Wildfire Crews" />
           <h3>Wildfire Crews</h3>
           <div class="content-panel-body">
             <div [innerHTML]="incident.wildfireCrewResourcesDetail"></div>
@@ -134,10 +135,11 @@
       </div>
       <!-- Wildfire Aviation -->
       <div *ngIf="incident.wildfireAviationResourceInd && incident.wildfireAviationResourceDetail"  class="resource-panel">
-        <div class="resource-panel-icon">
+        <div *ngIf="!isMobileView()" class="resource-panel-icon">
           <img class="image-size" src="../../../assets/images/svg-icons/aviation.svg" alt="Aviation" />
         </div>
         <div class="resource-panel-content">
+          <img *ngIf="isMobileView()" class="image-size" src="../../../assets/images/svg-icons/aviation.svg" alt="Aviation" />
           <h3>Wildfire Aviation</h3>
           <div class="content-panel-body">
             <div [innerHTML]="incident.wildfireAviationResourceDetail"></div>
@@ -150,10 +152,11 @@
       </div>
       <!-- Incident Management Teams -->
       <div *ngIf="incident.incidentMgmtCrewRsrcInd && incident.incidentMgmtCrewRsrcDetail"  class="resource-panel">
-        <div class="resource-panel-icon">
+        <div *ngIf="!isMobileView()" class="resource-panel-icon">
           <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Incident Management Team" />
         </div>
         <div class="resource-panel-content">
+          <img *ngIf="isMobileView()" class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Aviation" />
           <h3>Incident Management Team</h3>
           <div class="content-panel-body">
             <div [innerHTML]="incident.incidentMgmtCrewRsrcDetail"></div>
@@ -166,10 +169,11 @@
       </div>
       <!-- Heavy Equipment -->
       <div *ngIf="incident.heavyEquipmentResourcesInd && incident.heavyEquipmentResourcesDetail"  class="resource-panel">
-        <div class="resource-panel-icon">
+        <div *ngIf="!isMobileView()" class="resource-panel-icon">
           <img class="image-size" src="../../../assets/images/svg-icons/heavy_equipment.svg" alt="Heavy Equipment" />
         </div>
         <div class="resource-panel-content">
+          <img *ngIf="isMobileView()" class="image-size" src="../../../assets/images/svg-icons/heavy_equipment.svg" alt="Aviation" />
           <h3>Heavy Equipment</h3>
           <div class="content-panel-body">
             <div [innerHTML]="incident.heavyEquipmentResourcesDetail"></div>
@@ -182,10 +186,11 @@
       </div>
       <!-- Structure Protection -->
       <div *ngIf="incident.structureProtectionRsrcInd && incident.structureProtectionRsrcDetail"  class="resource-panel">
-        <div class="resource-panel-icon">
+        <div *ngIf="!isMobileView()" class="resource-panel-icon">
           <img class="image-size" src="../../../assets/images/svg-icons/structure-protection.svg" alt="Heavy Equipment" />
         </div>
         <div class="resource-panel-content">
+          <img *ngIf="isMobileView()" class="image-size" src="../../../assets/images/svg-icons/structure-protection.svg" alt="Aviation" />
           <h3>Structure Protection</h3>
           <div class="content-panel-body">
             <div [innerHTML]="incident.structureProtectionRsrcDetail"></div>
