--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -180,23 +180,28 @@
 
   .panel {
     padding: 15px;
-  }
-}
-
-.panel {
-  .content-panel {
-    .content-panel-stack {
-      margin-left: -8px;
-      margin-right: -8px;
-    }
-    .content-panel-stack> * {
-      padding-left: 8px;
-      padding-right: 8px;
+    .content-panel {
+      .content-panel-stack {
+        margin-left: -8px;
+        margin-right: -8px;
+      }
+      .content-panel-stack> * {
+        padding-left: 8px;
+        padding-right: 8px;
+      }
     }
   }
 }
 
 @media only screen and (max-width: 768px) {
+  .spacer-bottom {
+    padding-bottom: 10px !important;
+  }
+
+  .spacer-top {
+    padding-top: 10px !important;
+  }
+
   .panel {
     h4 {
       font-size: 1.3rem !important;
@@ -204,6 +209,20 @@
     .content-panel {
       h1 {
         font-size: 1.3rem !important;
+      }
+      .resource-panel {
+        padding-bottom: 10px !important;
+        .resource-panel-content {
+          h3 {
+            margin-left: 50px;
+            margin-top: 7px;
+          }
+          .image-size {
+            width: 40px;
+            height: 40px;
+            position: absolute;
+          }
+        }
       }
     }
     .header-row {
