Cleanup primary toggle, weather panel

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-gallery-panel.component.html
@@ -4,6 +4,6 @@
       <button mat-button color="primary" class="primary-button" (click)="upload()">Add Video</button>
     </div>
     <div class="image-gallery">
-      <video-card-panel *ngFor="let video of externalUriList.collection" [video]="video" [incident]="incident" (loadPage)="loadPage()" (removePrimaryFlags)="removePrimaryFlags()"></video-card-panel>
+      <video-card-panel *ngFor="let video of externalUriList.collection" [video]="video" [incident]="incident" (loadPage)="loadPage()" (removePrimaryFlags)="removePrimaryFlags($event)"></video-card-panel>
     </div>
   </ng-container>
