Add parks closures, formatting on public mobile view

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -1,4 +1,6 @@
 <div class="header-container forPrint" id="toprint-header">
+  <div id="map" class="map-container" *ngIf="hideOnMobileView()">
+  </div>
   <div class="incident-details">
     <div class="header">
     </div>
@@ -32,7 +34,7 @@
       </div>
     </div>
   </div>
-  <div id="map" class="map-container">
+  <div id="map" class="map-container" *ngIf="!hideOnMobileView()">
   </div>
 </div>
 
