Dont forget the px

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -75,7 +75,7 @@
 }
 
 :host ::ng-deep .mat-tab-header {
-  top: -1;
+  top: -1px;
   z-index: 1000;
   position: sticky;
   position: -webkit-sticky; /* macOS/iOS Safari */
