Add parks closures, formatting on public mobile view (#671)
* Add parks closures, formatting on public mobile view

* Set top -1

* Dont forget the px

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -73,3 +73,11 @@
   margin: auto;
   background-color: white;
 }
+
+:host ::ng-deep .mat-tab-header {
+  top: -1px;
+  z-index: 1000;
+  position: sticky;
+  position: -webkit-sticky; /* macOS/iOS Safari */
+  background-color: #f3f6f9;
+}
