--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -1,7 +1,7 @@
 <div class="header-container forPrint" id="toprint-header">
   <div id="map" class="map-container" *ngIf="hideOnMobileView()">
   </div>
-  <div class="incident-details">
+  <div class="incident-details" *ngIf="!hideOnMobileView()">
     <div class="header">
     </div>
     <div class="title-bar">
