--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -104,7 +104,7 @@
       font-weight: 400px;
       padding-bottom: 0.67rem;
       color: #003366;
-      text-decoration: underline;
+      text-decoration: none;
     }
     .learn-more-button-container {
       margin-top: 10px;
